@@ -29,6 +29,9 @@
 	<LI>HTMLDOC no longer inserts whitespace between text
 	inside DIV elements.
 
+	<LI>HTMLDOC now supports quoted usernames and passwords in
+	URLs.
+
 	<H3>Bug Fixes</H3>
 
 	<LI>"make install" didn't work in the fonts directory.
