@@ -2,7 +2,7 @@
 <HEAD>
 	<META NAME="author" CONTENT="Easy Software Products">
 	<META NAME="copyright" CONTENT="Copyright 1997-2002, See the GNU General Public License for Details.">
-	<META NAME="docnumber" CONTENT="ESP-003-20020702">
+	<META NAME="docnumber" CONTENT="ESP-003-20020718">
 	<TITLE>HTMLDOC 1.8.21 Software Users Manual</TITLE>
 </HEAD>
 <BODY>
